glx/testdata/invalid/invalid-assertion-properties/relationships/rel-parent-alice.glx
relationships:
  rel-parent-alice:
    type: parent-child
    participants:
      - person: person-father
        role: parent
      - person: person-alice
        role: child
